deploy/k8s/helm/apigwms/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: eshop_backend_route
                  virtual_hosts:
                    - name: eshop_backend
                      domains:
                        - ["*"]
                      routes:
                        - name: "c-short"
                          match:
                            prefix: "/c/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/catalog-api/"
                            cluster: catalog
                        - name: "c-long"
                          match:
                            prefix: "/catalog-api/"
                          route:
                            auto_host_rewrite: true
                            cluster: catalog
                        - name: "cp-short"
                          match:
                            prefix: "/cp/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/coupon-api/"
                            cluster: coupon
                        - name: "cp-long"
                          match:
                            prefix: "/coupon-api/"
                          route:
                            auto_host_rewrite: true
                            cluster: coupon
                        - name: "o-short"
                          match:
                            prefix: "/o/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/ordering-api/"
                            cluster: ordering
                        - name: "o-long"
                          match:
                            prefix: "/ordering-api/"
                          route:
                            auto_host_rewrite: true
                            cluster: ordering
                        - name: "h-long"
                          match:
                            prefix: "/hub/notificationhub"
                          route:
                            auto_host_rewrite: true
                            cluster: signalr-hub
                            timeout: 300s
                        - name: "b-short"
                          match:
                            prefix: "/b/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/basket-api/"
                            cluster: basket
                        - name: "b-long"
                          match:
                            prefix: "/basket-api/"
                          route:
                            auto_host_rewrite: true
                            cluster: basket
                        - name: "agg"
                          match:
                            prefix: "/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: shoppingagg
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: shoppingagg
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: shoppingagg
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: webshoppingagg
                      port_value: 80
    - name: catalog
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: catalog
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog-api
                      port_value: 80
    - name: coupon
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: coupon
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: coupon-api
                      port_value: 80
    - name: basket
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: basket
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: basket-api
                      port_value: 80
    - name: ordering
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: ordering
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ordering-api
                      port_value: 80
    - name: signalr-hub
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: signalr-hub
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ordering-signalrhub
                      port_value: 80
